Bug 1142527 - Always call ReleaseMediaResources() when entering dormant r=cpearce